Removendo Números do Tópicos

--- a/public_html/en/content/access.html
+++ b/public_html/en/content/access.html
@@ -1,4 +1,4 @@
-<h1>11 Access Authentication</h1>
+<h1>Access Authentication</h1>
 <hr class="col-md-12">
 <p>HTTP provides several OPTIONAL challenge-response authentication
    mechanisms which can be used by a server to challenge a client
