--- a/public_html/en/content/acknowledgments.html
+++ b/public_html/en/content/acknowledgments.html
@@ -1,4 +1,4 @@
-<h1>16 Acknowledgments</h1>
+<h1>Acknowledgments</h1>
 <hr class="col-md-12">
 <p>This specification makes heavy use of the augmented BNF and generic
    constructs defined by David H. Crocker for RFC 822 [9]. Similarly, it
