--- a/public_html/en/content/content.html
+++ b/public_html/en/content/content.html
@@ -1,4 +1,4 @@
-<h1>12 Content Negotiation</h1>
+<h1>Content Negotiation</h1>
 <hr class="col-md-12">
 <p>Most HTTP responses include an entity which contains information for
    interpretation by a human user. Naturally, it is desirable to supply
@@ -84,7 +84,7 @@
    servers.
 </p>
 <br/>
-<h2 id="sec1">12.2 Agent-driven Negotiation</h2>
+<h2 id="sec1">Agent-driven Negotiation</h2>
 <p>With agent-driven negotiation, selection of the best representation
    for a response is performed by the user agent after receiving an
    initial response from the origin server. Selection is based on a list
@@ -115,7 +115,7 @@
    negotiation.
 </p>
 <br/>
-<h2 id="sec2">12.3 Transparent Negotiation</h2>
+<h2 id="sec2">Transparent Negotiation</h2>
 <p>Transparent negotiation is a combination of both server-driven and
    agent-driven negotiation. When a cache is supplied with a form of the
    list of available representations of the response (as in agent-driven
