--- a/public_html/en/content/request.html
+++ b/public_html/en/content/request.html
@@ -1,10 +1,10 @@
-<h1>5 Request</h1>
+<h1>Request</h1>
 <hr class="col-md-12">
 <p> A request message from a client to a server includes, within the
    first line of that message, the method to be applied to the resource,
    the identifier of the resource, and the protocol version in use.
 </p>
-<h2 id="sec0">5.1 Request-Line</h2>
+<h2 id="sec0">Request-Line</h2>
 <p>The Request-Line begins with a method token, followed by the
    Request-URI and the protocol version, and ending with CRLF. The
    elements are separated by SP characters. No CR or LF is allowed
@@ -41,7 +41,7 @@
    in section 9.
 </p>
 <br/>
-<h3 id="sec1">5.1.2 Request-URI</h3>
+<h3 id="sec1">Request-URI</h3>
 <p>
    The Request-URI is a Uniform Resource Identifier (section 3.2) and
    identifies the resource upon which to apply the request.
@@ -147,7 +147,7 @@
    exact resource is being requested.
 </p>
 <br/>
-<h2 id="sec3">5.3 Request Header Fields</h2>
+<h2 id="sec3">Request Header Fields</h2>
 <p>The request-header fields allow the client to pass additional
    information about the request, and about the client itself, to the
    server. These fields act as request modifiers, with semantics
