--- a/public_html/en/content/response.html
+++ b/public_html/en/content/response.html
@@ -1,10 +1,10 @@
-<h1>6 Response</h1>
+<h1>Response</h1>
 <hr class="col-md-12">
 <p>After receiving and interpreting a request message, a server responds
    with an HTTP response message.
 </p>
 <br/>
-<h2 id="sec0">6.1 Status-Line</h2>
+<h2 id="sec0">Status-Line</h2>
 <p>The first line of a Response message is the Status-Line, consisting
    of the protocol version followed by a numeric status code and its
    associated textual phrase, with each element separated by SP
@@ -108,7 +108,7 @@
 </p>
 <p>
 <br/>
-<h2 id="sec2">6.2 Response Header Fields</h2>
+<h2 id="sec2">Response Header Fields</h2>
 <p>The response-header fields allow the server to pass additional
    information about the response which cannot be placed in the Status-
    Line. These header fields give information about the server and about
