--- a/public_html/en/content/authors.html
+++ b/public_html/en/content/authors.html
@@ -1,4 +1,4 @@
-<h1>18 Authors' Addresses</h1>
+<h1>Authors' Addresses</h1>
 <hr class="col-md-12">
 <div class="row">
     <div class="col-md-4">
@@ -78,11 +78,3 @@
          </address>
     </div>
 </div>
-
-   
-
-
-   
-
-
-   
