--- a/public_html/en/content/entity.html
+++ b/public_html/en/content/entity.html
@@ -1,4 +1,4 @@
-<h1>7 Entity</h1>
+<h1>Entity</h1>
 <hr class="col-md-12">
 <p>Request and Response messages MAY transfer an entity if not otherwise
    restricted by the request method or response status code. An entity
@@ -36,7 +36,7 @@
    transparent proxies.
 </p>
 <br/>
-<h2 id="sec0">7.2 Entity Body</h2>
+<h2 id="sec0">Entity Body</h2>
 <p>The entity-body (if any) sent with an HTTP request or response is in
    a format and encoding defined by the entity-header fields.
 </p>
@@ -49,7 +49,7 @@
    have been applied to ensure safe and proper transfer of the message.
 </p>
 <br/>
-<h3 id="sec0">7.2.1 Type</h3>
+<h3 id="sec0">Type</h3>
 <p>When an entity-body is included with a message, the data type of that
    body is determined via the header fields Content-Type and Content-
    Encoding. These define a two-layer, ordered encoding model:
@@ -71,7 +71,7 @@
    treat it as type "application/octet-stream".
 </p>
 <br/>
-<h3 id="sec0">7.2.2 Entity Length</h3>
+<h3 id="sec0">Entity Length</h3>
 <p>The entity-length of a message is the length of the message-body
    before any transfer-codings have been applied. Section 4.4 defines
    how the transfer-length of a message-body is determined.
