--- a/public_html/en/content/full.html
+++ b/public_html/en/content/full.html
@@ -1,4 +1,4 @@
-<h1>21.  Full Copyright Statement</h1>
+<h1>Full Copyright Statement</h1>
 <hr class="col-md-12">
 <p>Copyright (C) The Internet Society (1999).  All Rights Reserved.
 </p>
@@ -25,44 +25,4 @@
    BUT NOT LIMITED TO ANY WARRANTY THAT THE USE OF THE INFORMATION
    HEREIN WILL NOT INFRINGE ANY RIGHTS OR ANY IMPLIED WARRANTIES OF
    MERCHANTABILITY OR FITNESS FOR A PARTICULAR PURPOSE.
-</p>
-<p>
-    Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis.
-    Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis.
-    Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é
-    amistosis quis leo. Manduma pindureta quium dia nois paga.
-    Sapien in monti palavris qui num significa nadis i pareci latim.
-    Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.
-</p>
-<br/>
-<h2 id="sec2">1.3 Subtitulo</h2>
-<p>
-    Cevadis im ampola pa arma uma pindureta. Nam varius eleifend orci, sed
-    viverra nisl condimentum ut. Donec eget justis enim. Atirei o pau no gatis.
-    Viva Forevis aptent taciti sociosqu ad litora torquent per conubia nostra,
-    per inceptos himenaeos. Copo furadis é disculpa de babadis, arcu quam
-    euismod magna, bibendum egestas augue arcu ut est. Delegadis gente finis.
-    In sit amet mattis porris, paradis. Paisis, filhis, espiritis santis.
-    Mé faiz elementum girarzis. Pellentesque viverra accumsan ipsum elementum
-    gravidis.
-</p>
-<p>
-   Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e 
-   fermentis. Interagi no mé, cursus quis, vehicula ac nisi. Aenean vel dui dui.
-   Nullam leo erat, aliquet quis tempus a, posuere ut mi. Ut scelerisque neque
-   et turpis posuere pulvinar pellentesque nibh ullamcorper.
-   Pharetra in mattis molestie, volutpat elementum justo. Aenean ut ante turpis.
-   Pellentesque laoreet mé vel lectus scelerisque interdum cursus velit auctor.
-   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac mauris
-   lectus, non scelerisque augue. Aenean justo massa.
-</p>
-<p>
-    Casamentiss faiz malandris se pirulitá, Nam liber tempor cum soluta nobis
-    eleifend option congue nihil imperdiet doming id quod mazim placerat facer
-    possim assum. Lorem ipsum dolor sit amet, consectetuer Ispecialista im mé
-    intende tudis nuam golada, vinho, uiski, carirí, rum da jamaikis, só num
-    pode ser mijis. Adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-    laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-    quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
-    ea commodo consequat.
 </p>
