--- a/public_html/en/content/introduction.html
+++ b/public_html/en/content/introduction.html
@@ -1,6 +1,6 @@
-<h1>1 Introduction</h1>
+<h1>Introduction</h1>
 <hr class="col-md-12">
-<h2 id="sec0">1.1 Purpose</h2>
+<h2 id="sec0">Purpose</h2>
 <p>
     The Hypertext Transfer Protocol (HTTP) is an application-level
    protocol for distributed, collaborative, hypermedia information
@@ -43,25 +43,25 @@
    access to resources available from diverse applications.
 </p>
 <br/>
-<h2 id="sec1">1.2 Requirements</h2>
+<h2 id="sec1">Requirements</h2>
 <p>
-The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT","SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this
+The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT","SHOULD",
+"SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this
 document are to be interpreted as described in RFC 2119 [34].
 </p>
-<p>
-    An implementation is not compliant if it fails to satisfy one or more
+<p>An implementation is not compliant if it fails to satisfy one or more
    of the MUST or REQUIRED level requirements for the protocols it
    implements. An implementation that satisfies all the MUST or REQUIRED
    level and all the SHOULD level requirements for its protocols is said
    to be "unconditionally compliant"; one that satisfies all the MUST
    level requirements but not all the SHOULD level requirements for its
    protocols is said to be "conditionally compliant."
-
 </p>
 <br/>
-<h2 id="sec2">1.3 Terminology</h2>
+<h2 id="sec2">Terminology</h2>
 <p>
-This specification uses a number of terms to refer to the roles played by participants in, and objects of, the HTTP communication.
+This specification uses a number of terms to refer to the roles played by 
+participants in, and objects of, the HTTP communication.
 </p>
 <dl class="dl-horizontal">
   <dt>connection</dt>
@@ -224,7 +224,7 @@ This specification uses a number of terms to refer to the roles played by partic
   </dd>
 </dl>
 <br/>
-<h2 id="sec3">1.4 Overall Operation</h2>
+<h2 id="sec3">Overall Operation</h2>
 <p>
 The HTTP protocol is a request/response protocol. A client sends a
    request to the server in the form of a request method, URI, and
