--- a/public_html/en/content/status.html
+++ b/public_html/en/content/status.html
@@ -1,10 +1,10 @@
-<h1>10 Status Code Definitions</h1>
+<h1>Status Code Definitions</h1>
 <p>Each Status-Code is described below, including a description of which
    method(s) it can follow and any metainformation required in the
    response.
 </p>
 <hr class="col-md-12">
-<h2 id="sec0">10.1 Informational 1xx</h2>
+<h2 id="sec0">Informational 1xx</h2>
 <p>This class of status code indicates a provisional response,
    consisting only of the Status-Line and optional headers, and is
    terminated by an empty line. There are no required headers for this
@@ -25,7 +25,7 @@
    response(s).)
 </p>
 <br/>
-<h3 id="sec1">10.1.1 100 Continue</h3>
+<h3 id="sec1">100 Continue</h3>
 <p>The client SHOULD continue with its request. This interim response is
    used to inform the client that the initial part of the request has
    been received and has not yet been rejected by the server. The client
@@ -36,7 +36,7 @@
    status code.
 </p>
 <br/>
-<h3 id="sec3">10.1.2 101 Switching Protocols</h3>
+<h3 id="sec3">101 Switching Protocols</h3>
 <p>The server understands and is willing to comply with the client's
    request, via the Upgrade message header field (section 14.42), for a
    change in the application protocol being used on this connection. The
@@ -51,12 +51,12 @@
    such features.
 </p>
 <br/>
-<h2 id="sec4">10.2 Successful 2xxo</h2>
+<h2 id="sec4">Successful 2xxo</h2>
 <p>This class of status code indicates that the client's request was
    successfully received, understood, and accepted.
 </p>
 <br/>
-<h3 id="sec5">10.2.1 200 OK</h3>
+<h3 id="sec5">200 OK</h3>
 <p>The request has succeeded. The information returned with the response
    is dependent on the method used in the request, for example:
 </p>
@@ -75,7 +75,7 @@
           end server.</dd>
 </dl>
 <br/>
-<h3 id="sec6">10.2.2 201 Created</h3>
+<h3 id="sec6">201 Created</h3>
 <p>The request has been fulfilled and resulted in a new resource being
    created. The newly created resource can be referenced by the URI(s)
    returned in the entity of the response, with the most specific URI
@@ -93,7 +93,7 @@
    created, see section 14.19.
 </p>
 <br/>
-<h3 id="sec7">10.2.3 202 Accepted</h3>
+<h3 id="sec7">202 Accepted</h3>
 <p>The request has been accepted for processing, but the processing has
    not been completed.  The request might or might not eventually be
    acted upon, as it might be disallowed when processing actually takes
@@ -110,7 +110,7 @@
    user can expect the request to be fulfilled.
 </p>
 <br/>
-<h3 id="sec8">10.2.4 203 Non-Authoritative Information</h3>
+<h3 id="sec8">203 Non-Authoritative Information</h3>
 <p>The returned metainformation in the entity-header is not the
    definitive set as available from the origin server, but is gathered
    from a local or a third-party copy. The set presented MAY be a subset
@@ -121,7 +121,7 @@
    response would otherwise be 200 (OK).
 </p>
 <br/>
-<h3 id="sec9">10.2.5 204 No Content</h3>
+<h3 id="sec9">204 No Content</h3>
 <p>The server has fulfilled the request but does not need to return an
    entity-body, and might want to return updated metainformation. The
    response MAY include new or updated metainformation in the form of
@@ -138,7 +138,7 @@
    terminated by the first empty line after the header fields.
 </p>
 <br/>
-<h3 id="sec10">10.2.6 205 Reset Content</h3>   
+<h3 id="sec10">205 Reset Content</h3>   
 <p>The server has fulfilled the request and the user agent SHOULD reset
    the document view which caused the request to be sent. This response
    is primarily intended to allow input for actions to take place via
@@ -147,7 +147,7 @@
    response MUST NOT include an entity.
 </p>
 <br/>
-<h3 id="sec11">10.2.7 206 Partial Content</h3>
+<h3 id="sec11">206 Partial Content</h3>
 <p>The server has fulfilled the partial GET request for the resource.
    The request MUST have included a Range header field (section 14.35)
    indicating the desired range, and MAY have included an If-Range
@@ -161,7 +161,6 @@
         Content-Length header field is present in the response, its
         value MUST match the actual number of OCTETs transmitted in the
         message-body.
-
 </p>
 <p>- Date
 </p>
@@ -189,7 +188,7 @@
    MUST NOT cache 206 (Partial) responses.
 </p>
 <br/>
-<h2 id='sec11'>10.3 Redirection 3xx</h2>
+<h2 id='sec11'>Redirection 3xx</h2>
 <p>This class of status code indicates that further action needs to be
    taken by the user agent in order to fulfill the request.  The action
    required MAY be carried out by the user agent without interaction
@@ -205,7 +204,7 @@
       limitation.</p>
 </div>
 <br/>
-<h3 id='sec12'>10.3.1 300 Multiple Choices</h3>
+<h3 id='sec12'>300 Multiple Choices</h3>
 <p>The requested resource corresponds to any one of a set of
    representations, each with its own specific location, and agent-
    driven negotiation information (section 12) is being provided so that
@@ -227,7 +226,7 @@
    redirection. This response is cacheable unless indicated otherwise.
 </p>
 <br/>
-<h3 id='sec13'>10.3.2 301 Moved Permanently</h3>
+<h3 id='sec13'>301 Moved Permanently</h3>
 <p>The requested resource has been assigned a new permanent URI and any
    future references to this resource SHOULD use one of the returned
    URIs.  Clients with link editing capabilities ought to automatically
@@ -253,7 +252,7 @@
     </p>
 </div>
 <br/>
-<h3 id='sec14'>10.3.2 301 Moved Permanently</h3>
+<h3 id='sec14'>301 Moved Permanently</h3>
 <p>The requested resource resides temporarily under a different URI.
    Since the redirection might be altered on occasion, the client SHOULD
    continue to use the Request-URI for future requests.  This response
@@ -281,7 +280,7 @@
     </p>
 </div>
 <br/>
-<h3 id='sec15'>10.3.4 303 See Other</h3>
+<h3 id='sec15'>303 See Other</h3>
 <p>The response to the request can be found under a different URI and
    SHOULD be retrieved using a GET method on that resource. This method
    exists primarily to allow the output of a POST-activated script to
@@ -304,7 +303,7 @@
     </p>
 </div>
 <br/>
-<h3 id='sec16'>10.3.5 304 Not Modified</h3>
+<h3 id='sec16'>304 Not Modified</h3>
 <p>If the client has performed a conditional GET request and access is
    allowed, but the document has not been modified, the server SHOULD
    respond with this status code. The 304 response MUST NOT contain a
@@ -341,7 +340,7 @@
    the response.
 </p>
 <br/>
-<h3 id='sec17'>10.3.6 305 Use Proxy</h3>
+<h3 id='sec17'>305 Use Proxy</h3>
 <p>The requested resource MUST be accessed through the proxy given by
    the Location field. The Location field gives the URI of the proxy.
    The recipient is expected to repeat this single request via the
@@ -355,7 +354,7 @@
     </p>
 </div>
 <br/>
-<h3 id='sec18'>10.3.7 306 (Unused)</h3>
+<h3 id='sec18'>306 (Unused)</h3>
 <p>The 306 status code was used in a previous version of the
    specification, is no longer used, and the code is reserved.</p>
 <br/>
@@ -379,7 +378,7 @@
    change the conditions under which the request was issued.
 </p>
 <br/>
-<h2 id='sec20'>10.4 Client Error 4xx</h2>
+<h2 id='sec20'>Client Error 4xx</h2>
 <p>The 4xx class of status code is intended for cases in which the
    client seems to have erred. Except when responding to a HEAD request,
    the server SHOULD include an entity containing an explanation of the
@@ -396,13 +395,13 @@
    before they can be read and interpreted by the HTTP application.
 </p>
 <br/>
-<h3 id='sec21'>10.4.1 400 Bad Request</h3>
+<h3 id='sec21'>400 Bad Request</h3>
 <p>The request could not be understood by the server due to malformed
    syntax. The client SHOULD NOT repeat the request without
    modifications.
 </p>
 <br/>
-<h3 id='sec22'>10.4.2 401 Unauthorized</h3>
+<h3 id='sec22'>401 Unauthorized</h3>
 <p>The request requires user authentication. The response MUST include a
    WWW-Authenticate header field (section 14.47) containing a challenge
    applicable to the requested resource. The client MAY repeat the
@@ -418,11 +417,11 @@
    Authentication" [43].
 </p>
 <br/>
-<h3 id='sec23'>10.4.3 402 Payment Required</h3>
+<h3 id='sec23'>402 Payment Required</h3>
 <p>This code is reserved for future use.
 </p>
 <br/>
-<h3 id='sec24'>10.4.4 403 Forbidden</h3>
+<h3 id='sec24'>403 Forbidden</h3>
 <p>The server understood the request, but is refusing to fulfill it.
    Authorization will not help and the request SHOULD NOT be repeated.
    If the request method was not HEAD and the server wishes to make
@@ -432,7 +431,7 @@
    (Not Found) can be used instead.
 </p>
 <br/>
-<h3 id='sec25'>10.4.5 404 Not Found</h3>
+<h3 id='sec25'>404 Not Found</h3>
 <p>The server has not found anything matching the Request-URI. No
    indication is given of whether the condition is temporary or
    permanent. The 410 (Gone) status code SHOULD be used if the server
@@ -443,20 +442,20 @@
    response is applicable.
 </p>
 <br/>
-<h3 id='sec26'>10.4.6 405 Method Not Allowed</h3>
+<h3 id='sec26'>405 Method Not Allowed</h3>
 <p>The method specified in the Request-Line is not allowed for the
    resource identified by the Request-URI. The response MUST include an
    Allow header containing a list of valid methods for the requested
    resource.
 </p>
 <br/>
-<h3 id='sec27'>10.4.7 406 Not Acceptable</h3>
+<h3 id='sec27'>406 Not Acceptable</h3>
 <p>The resource identified by the request is only capable of generating
    response entities which have content characteristics not acceptable
    according to the accept headers sent in the request.
 </p>
 <br/>
-<h3 id='sec28'>10.4.6 405 Method Not Allowed</h3>
+<h3 id='sec28'>405 Method Not Allowed</h3>
 <p>Unless it was a HEAD request, the response SHOULD include an entity
    containing a list of available entity characteristics and location(s)
    from which the user or user agent can choose the one most
@@ -480,7 +479,7 @@
    decision on further actions.
 </p>
 <br/>
-<h3 id='sec29'>10.4.8 407 Proxy Authentication Required</h3>
+<h3 id='sec29'>407 Proxy Authentication Required</h3>
 <p> This code is similar to 401 (Unauthorized), but indicates that the
    client must first authenticate itself with the proxy. The proxy MUST
    return a Proxy-Authenticate header field (section 14.33) containing a
@@ -491,13 +490,13 @@
    [43].
 </p>
 <br/>
-<h3 id='sec30'>10.4.9 408 Request Timeout</h3>
+<h3 id='sec30'>408 Request Timeout</h3>
 <p>The client did not produce a request within the time that the server
    was prepared to wait. The client MAY repeat the request without
    modifications at any later time.
 </p>
 <br/>
-<h3 id='sec31'>10.4.10 409 Conflict</h3>
+<h3 id='sec31'>409 Conflict</h3>
 <p>The request could not be completed due to a conflict with the current
    state of the resource. This code is only allowed in situations where
    it is expected that the user might be able to resolve the conflict
@@ -517,7 +516,7 @@
    Content-Type.
 </p>
 <br/>
-<h3 id='sec32'>10.4.11 410 Gone</h3>
+<h3 id='sec32'>410 Gone</h3>
 <p>The requested resource is no longer available at the server and no
    forwarding address is known. This condition is expected to be
    considered permanent. Clients with link editing capabilities SHOULD
@@ -537,14 +536,14 @@
    discretion of the server owner.
 </p>
 <br/>
-<h3 id='sec33'>10.4.12 411 Length Required</h3>
+<h3 id='sec33'>411 Length Required</h3>
 <p>The server refuses to accept the request without a defined Content-
    Length. The client MAY repeat the request if it adds a valid
    Content-Length header field containing the length of the message-body
    in the request message.
 </p>
 <br/>
-<h3 id='sec34'>10.4.13 412 Precondition Failed</h3>
+<h3 id='sec34'>412 Precondition Failed</h3>
 <p>The precondition given in one or more of the request-header fields
    evaluated to false when it was tested on the server. This response
    code allows the client to place preconditions on the current resource
@@ -552,7 +551,7 @@
    method from being applied to a resource other than the one intended.
 </p>
 <br/>
-<h3 id='sec35'>10.4.14 413 Request Entity Too Large</h3>
+<h3 id='sec35'>413 Request Entity Too Large</h3>
 <p>The server is refusing to process a request because the request
    entity is larger than the server is willing or able to process. The
    server MAY close the connection to prevent the client from continuing
@@ -563,7 +562,7 @@
    time the client MAY try again.
 </p>
 <br/>
-<h3 id='sec36'>10.4.15 414 Request-URI Too Long</h3>
+<h3 id='sec36'>414 Request-URI Too Long</h3>
 <p>The server is refusing to service the request because the Request-URI
    is longer than the server is willing to interpret. This rare
    condition is only likely to occur when a client has improperly
@@ -575,13 +574,13 @@
    buffers for reading or manipulating the Request-URI.
 </p>
 <br/>
-<h3 id='sec37'>10.4.16 415 Unsupported Media Type</h3>
+<h3 id='sec37'>415 Unsupported Media Type</h3>
 <p>The server is refusing to service the request because the entity of
    the request is in a format not supported by the requested resource
    for the requested method.
 </p>
 <br/>
-<h3 id='sec38'>10.4.17 416 Requested Range Not Satisfiable</h3>
+<h3 id='sec38'>416 Requested Range Not Satisfiable</h3>
 <p>A server SHOULD return a response with this status code if a request
    included a Range request-header field (section 14.35), and none of
    the range-specifier values in this field overlap the current extent
@@ -596,14 +595,14 @@
    14.16). This response MUST NOT use the multipart/byteranges content-
    type.
 </p>
-<h3 id='sec39'>10.4.18 417 Expectation Failed</h3>
+<h3 id='sec39'>417 Expectation Failed</h3>
 <p>The expectation given in an Expect request-header field (see section
    14.20) could not be met by this server, or, if the server is a proxy,
    the server has unambiguous evidence that the request could not be met
    by the next-hop server.
 </p>
 <br/>
-<h2 id='sec40'>10.5 Server Error 5xx</h2>
+<h2 id='sec40'>Server Error 5xx</h2>
 <p>Response status codes beginning with the digit "5" indicate cases in
    which the server is aware that it has erred or is incapable of
    performing the request. Except when responding to a HEAD request, the
@@ -612,25 +611,25 @@
    condition. User agents SHOULD display any included entity to the
    user. These response codes are applicable to any request method.</p>
 <br/>
-<h3 id='sec41'>10.5.1 500 Internal Server Error</h3>
+<h3 id='sec41'>500 Internal Server Error</h3>
 <p>The server encountered an unexpected condition which prevented it
    from fulfilling the request.
 </p>
 <br/>
-<h3 id='sec42'>10.5.2 501 Not Implemented</h3>
+<h3 id='sec42'>501 Not Implemented</h3>
 <p>The server does not support the functionality required to fulfill the
    request. This is the appropriate response when the server does not
    recognize the request method and is not capable of supporting it for
    any resource.
 </p>
 <br/>
-<h3 id='sec43'>10.5.3 502 Bad Gateway</h3>
+<h3 id='sec43'>502 Bad Gateway</h3>
 <p>The server, while acting as a gateway or proxy, received an invalid
    response from the upstream server it accessed in attempting to
    fulfill the request.
 </p>
 <br/>
-<h3 id='sec44'>10.5.4 503 Service Unavailable</h3>
+<h3 id='sec44'>503 Service Unavailable</h3>
 <p>The server is currently unable to handle the request due to a
    temporary overloading or maintenance of the server. The implication
    is that this is a temporary condition which will be alleviated after
@@ -646,7 +645,7 @@
     </p>
 </div>
 <br/>
-<h3 id='sec45'>10.5.5 504 Gateway Timeout</h3>
+<h3 id='sec45'>504 Gateway Timeout</h3>
 <p>The server, while acting as a gateway or proxy, did not receive a
    timely response from the upstream server specified by the URI (e.g.
    HTTP, FTP, LDAP) or some other auxiliary server (e.g. DNS) it needed
@@ -658,7 +657,7 @@
     </p>
 </div>
 <br/>
-<h3 id='sec46'>10.5.6 505 HTTP Version Not Supported</h3>
+<h3 id='sec46'>505 HTTP Version Not Supported</h3>
 <p>The server does not support, or refuses to support, the HTTP protocol
    version that was used in the request message. The server is
    indicating that it is unable or unwilling to complete the request
