--- a/public_html/en/index.html
+++ b/public_html/en/index.html
@@ -32,7 +32,7 @@
                       <a href="#">Contributors</a>
                     </li>
                     <li>
-                      <a href="/file/rfc2616.txt">Version TXT</a>
+                      <a href="/files/rfc2616.txt">Version TXT</a>
                     </li>
                   </ul>
                 </nav>
