--- a/public_html/exemplos/nota.html
+++ b/public_html/exemplos/nota.html
@@ -3,3 +3,8 @@
     <p>descrição
     </p>
 </div>
+<div class="bs-callout bs-callout-warning">
+    <h4>titulo</h4>
+    <p>descrição
+    </p>
+</div>
