--- a/public_html/en/content/content.html
+++ b/public_html/en/content/content.html
@@ -30,7 +30,7 @@
    server-driven negotiation for subsequent requests.
 </p>
 <br/>
-<h2 id="sec0">12.1 Server-driven Negotiation</h2>
+<h2 id="sec0">Server-driven Negotiation</h2>
 <p>If the selection of the best representation for a response is made by
    an algorithm located at the server, it is called server-driven
    negotiation. Selection is based on the available representations of
